--- a/app/src/main/res/layout/friends_search.xml
+++ b/app/src/main/res/layout/friends_search.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/colorBackground"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:nestedScrollingEnabled="true"
@@ -17,7 +17,7 @@
         app:mt_placeholderColor="@android:color/darker_gray"
         app:mt_backIconTint="@android:color/darker_gray"
         app:mt_hintColor="@android:color/darker_gray"
-        app:mt_textColor="@android:color/black"
+        app:mt_textColor="@color/colorText"
         app:mt_placeholder="Search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
