--- a/app/src/main/res/navigation/navigation_graph_tab_profile.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_profile.xml
@@ -102,6 +102,9 @@
             app:argType="com.timenoteco.timenote.model.UserInfoDTO"
             app:nullable="true"
             android:defaultValue="@null" />
+        <action
+            android:id="@+id/action_profile_to_notifications2"
+            app:destination="@id/notifications" />
     </fragment>
     <fragment
         android:id="@+id/profilModify"
@@ -130,7 +133,14 @@
         android:id="@+id/notifications"
         android:name="com.timenoteco.timenote.view.profileFlow.Notifications"
         android:label="fragment_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_notifications" >
+        <action
+            android:id="@+id/action_notifications_to_profile"
+            app:destination="@id/profile" />
+        <action
+            android:id="@+id/action_notifications_to_detailedTimenote"
+            app:destination="@id/detailedTimenote" />
+    </fragment>
     <fragment
         android:id="@+id/notificationManager"
         android:name="com.timenoteco.timenote.view.profileFlow.settingsDirectory.NotificationManager"
