--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -25,9 +25,9 @@
         tools:text="Ruby Aliza wants to follow you and i can add some text"
         android:textSize="13sp"
         android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toStartOf="@id/notification_item_user_accept"
         app:layout_constraintStart_toEndOf="@id/notification_user_pic_imageview"
         android:layout_width="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/notification_user_pic_imageview" />
     
@@ -41,6 +41,35 @@
         tools:text="23 minutes"
         app:layout_constraintStart_toEndOf="@id/notification_user_pic_imageview"
         app:layout_constraintTop_toBottomOf="@id/notification_annoucement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
+    <ImageView
+        android:visibility="gone"
+        android:src="@drawable/ic_baseline_remove_notif"
+        android:paddingVertical="6dp"
+        android:paddingHorizontal="8dp"
+        android:id="@+id/notification_item_user_decline"
+        android:gravity="center"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/notification_annoucement"
+        app:layout_constraintTop_toTopOf="@id/notification_annoucement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:visibility="gone"
+        android:src="@drawable/ic_add_circle_yellow_notif"
+        android:paddingVertical="6dp"
+        android:paddingHorizontal="8dp"
+        android:gravity="center"
+        android:id="@+id/notification_item_user_accept"
+        app:layout_constraintEnd_toStartOf="@id/notification_item_user_decline"
+        app:layout_constraintBottom_toBottomOf="@id/notification_annoucement"
+
+        app:layout_constraintTop_toTopOf="@id/notification_annoucement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
