--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -117,6 +117,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:visibility="visible"
                     android:id="@+id/home_rv"
+                    android:paddingBottom="8dp"
+                    android:clipToPadding="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorBackground"
