--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -365,7 +365,7 @@
             android:background="@color/colorBackground"
             android:id="@+id/scrollable"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:fillViewport="false"
             android:scrollbars="none"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
