--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:background="@color/colorBackground"
     android:layout_height="wrap_content"
-    android:padding="8dp"
+    android:paddingHorizontal="8dp"
+    android:paddingVertical="12dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -11,7 +12,6 @@
         android:src="@drawable/beach"
         android:id="@+id/notification_user_pic_imageview"
         android:layout_marginVertical="4dp"
-        android:layout_marginStart="8dp"
         android:layout_width="36dp"
         android:layout_height="36dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,7 +22,7 @@
         android:fontFamily="sans-serif-light"
         android:id="@+id/notification_annoucement"
         android:textColor="@color/colorText"
-        tools:text="Ruby Aliza wants to follow you and i can add some text"
+        tools:text="Ruby Aliza wants to follow you and "
         android:textSize="13sp"
         android:layout_marginStart="8dp"
         app:layout_constraintEnd_toStartOf="@id/notification_item_user_accept"
@@ -52,10 +52,9 @@
         android:paddingHorizontal="8dp"
         android:id="@+id/notification_item_user_decline"
         android:gravity="center"
-        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/notification_annoucement"
-        app:layout_constraintTop_toTopOf="@id/notification_annoucement"
+        app:layout_constraintBottom_toBottomOf="@id/notification_user_pic_imageview"
+        app:layout_constraintTop_toTopOf="@id/notification_user_pic_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -67,9 +66,8 @@
         android:gravity="center"
         android:id="@+id/notification_item_user_accept"
         app:layout_constraintEnd_toStartOf="@id/notification_item_user_decline"
-        app:layout_constraintBottom_toBottomOf="@id/notification_annoucement"
-
-        app:layout_constraintTop_toTopOf="@id/notification_annoucement"
+        app:layout_constraintBottom_toBottomOf="@id/notification_user_pic_imageview"
+        app:layout_constraintTop_toTopOf="@id/notification_user_pic_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
