--- a/app/src/main/res/navigation/navigation_graph_tab_nearby.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_nearby.xml
@@ -117,7 +117,7 @@
         android:name="com.timenoteco.timenote.view.profileFlow.Profile"
         android:label="Profile" >
         <argument
-            android:name="whereFrom"
+            android:name="isNotMine"
             app:argType="boolean" />
         <action
             android:id="@+id/action_profile_to_detailedTimenote"
@@ -138,6 +138,9 @@
             android:name="userInfoDTO"
             app:argType="com.timenoteco.timenote.model.UserInfoDTO"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_profile_to_profilModify"
+            app:destination="@id/profilModify" />
     </fragment>
     <fragment
         android:id="@+id/timenoteAddress"
@@ -189,4 +192,16 @@
         android:name="com.timenoteco.timenote.view.profileFlow.FollowPage"
         android:label="fragment_follow_page"
         tools:layout="@layout/fragment_follow_page" />
+    <fragment
+        android:id="@+id/profilModify"
+        android:name="com.timenoteco.timenote.view.profileFlow.ProfilModify"
+        android:label="ProfilModify" >
+        <argument
+            android:name="isNotMine"
+            app:argType="boolean" />
+        <argument
+            android:name="userInfoDTO"
+            app:argType="com.timenoteco.timenote.model.UserInfoDTO"
+            app:nullable="true" />
+    </fragment>
 </navigation>
