--- a/app/src/main/res/layout/item_profile_timenote_list_style.xml
+++ b/app/src/main/res/layout/item_profile_timenote_list_style.xml
@@ -42,10 +42,13 @@
             android:textSize="15sp"
             android:textColor="@color/colorText"
             android:textAllCaps="true"
+            android:maxLines="1"
+            android:ellipsize="end"
             tools:text="beach Volley"
+            app:layout_constraintEnd_toStartOf="@id/profile_item_options"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/item_card"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
         <TextView
@@ -80,14 +83,18 @@
         <TextView
             android:id="@+id/profile_item_name_owner"
             android:fontFamily="sans-serif-light"
-            android:gravity="center"
+            app:layout_constraintEnd_toStartOf="@id/profile_item_date_event"
             app:layout_constraintStart_toEndOf="@id/profile_item_pic_profile_imageview"
             android:textSize="13sp"
             android:textColor="@color/colorText"
             android:layout_marginStart="4dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:layout_marginEnd="8dp"
+            tools:text="mystic tournament this is a long test to text"
             app:layout_constraintTop_toTopOf="@id/profile_item_pic_profile_imageview"
             app:layout_constraintBottom_toBottomOf="@id/profile_item_pic_profile_imageview"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
         <TextView
