--- a/app/src/main/res/layout/item_user_send.xml
+++ b/app/src/main/res/layout/item_user_send.xml
@@ -22,14 +22,16 @@
     <TextView
         android:fontFamily="sans-serif-light"
         android:id="@+id/name_user"
-        android:gravity="center"
         android:textColor="@color/colorText"
         tools:text="samo23"
         android:textSize="15sp"
         android:layout_marginStart="15dp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        app:layout_constraintEnd_toStartOf="@id/item_user_send"
         app:layout_constraintBottom_toTopOf="@id/givenName"
         app:layout_constraintStart_toEndOf="@id/user_imageview"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/user_imageview" />
 
@@ -40,9 +42,12 @@
         android:textColor="@android:color/darker_gray"
         app:layout_constraintTop_toBottomOf="@id/name_user"
         android:id="@+id/givenName"
+        android:maxLines="1"
+        android:ellipsize="end"
+        app:layout_constraintEnd_toStartOf="@id/item_user_send"
         app:layout_constraintBottom_toBottomOf="@id/user_imageview"
         app:layout_constraintStart_toEndOf="@id/user_imageview"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"/>
 
 
